# RAG-Evaluation

./: .gitignore  Dockerfile  README.md  app.py  create_answer.py  docker-cheat_sheet.md  docker-compose.yml  evaluator.py  graph.py  main.py  pyproject.toml  requirements.txt  start_server.sh
DB/: .dockerignore  .gitignore  Dockerfile  auth.py  crud.py  database.py  docker-compose.yml  docker_test.py  dockerrun.sh  main.py  models.py  mongo-docker-compose.yml  mongodb-docker-compose.yml  mysql-docker-compose.yml  postgres-docker-compose.yml  pyproject.toml  qdrant.sh  requirements.txt  start_server.sh  test.sh
DB/app/: crud.py  main.py  models.py  schemas.py
DB/app/api/: users.py
DB/app/api/v1/: insert.py  read.py  router.py
DB/app/core/: __init__.py  config.py  create_db.py  insert_data.py  read_data.py
DB/app/database/: database.py
DB/app/db/: database.py
DB/app/models/: models.py  user_model.py
DB/app/routes/: users.py
DB/app/services/: crud.py  user_service.py
DB/routers/: users.py
DB/test/: close.py  docker_test.py  test.ipynb  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py
RAG/: 03-01_bmt_dense.ipynb  (+9 more)
parasite_library/: pyproject.toml
parasite_library/src/: app.py
parasite_library/src/parasite_library/: Decorator.py  __init__.py
parasite_library/src/parasite_library/DataProcessor/: DataPreprocessor.py  RecieveData.py  __init__.py
parasite_library/src/parasite_library/GenerateReport/: GenerateReport.py  __init__.py
parasite_library/src/parasite_library/Prompts/: ENG_PROMPT.txt  KOR_GENERATE_ANS_PROMPT.txt  KOR_PROMPT.txt
(+181 files in other folders)
