[project]
name = "parasite_library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.2.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.10",
    "langchain-openai>=0.3.32",
    "pandas>=2.3.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "langchain-huggingface",
    "chardet"
]
